# google-ads-demo

./: .gitignore  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  README.md
backend/: .env.example  .gitignore  README.md  google-ads.yaml.example  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: campaigns.py  health.py
backend/app/constants/: __init__.py
backend/app/core/: config.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: campaign_service.py
backend/app/utils/: errors.py  google_ads_client.py  logger.py
backend/migrations/versions/: d37fae67729c_campaign_table_created.py
backend/src/app/: __init__.py  test.py
backend/src/app/api/: __init__.py
backend/src/app/api/v1/: __init__.py
backend/src/app/api/v1/endpoints/: __init__.py  campaigns.py  health.py
backend/src/app/constants/: __init__.py  campaign_constants.py
backend/src/app/core/: __init__.py  config.py  extensions.py
backend/src/app/models/: __init__.py  campaign.py
backend/src/app/schemas/: __init__.py  campaign_schema.py
backend/src/app/services/: __init__.py  campaign_service.py  google_ads_service.py
backend/src/app/utils/: __init__.py  errors.py  google_ads_client.py  logger.py
frontend/: README.md  index.html  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CampaignList.tsx  CampaignModal.tsx  Snackbar.tsx
frontend/src/lib/: apiErrors.ts  constants.ts
(+2 files in other folders)
